--- a/Services/Catalog/Ticket.Services.Catalog/Ticket.Services.Catalog.csproj
+++ b/Services/Catalog/Ticket.Services.Catalog/Ticket.Services.Catalog.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\Ticket.Shared\Ticket.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
