IdentityServer user registration confugiration

--- a/IdentityServer/Ticket.IdentityServer/appsettings.json
+++ b/IdentityServer/Ticket.IdentityServer/appsettings.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "server=localhost,1433;Database=identitydb;user=sa;pwd=Password123"
   }
 }
