Authentication for Catalog service

--- a/Services/Catalog/Ticket.Services.Catalog/appsettings.json
+++ b/Services/Catalog/Ticket.Services.Catalog/appsettings.json
@@ -3,8 +3,9 @@
     "EventCollectionName": "Events",
     "CategoryCollectionName": "Categories",
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName":  "CatalogDb"
+    "DatabaseName": "CatalogDb"
   },
+  "IdentityServerURL": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
