--- a/Services/Basket/Ticket.Services.Bakset/appsettings.json
+++ b/Services/Basket/Ticket.Services.Bakset/appsettings.json
@@ -1,8 +1,9 @@
 {
   "RedisSettings": {
     "Host": "localhost",
-    "Port":  6379
-  }
+    "Port": 6379
+  },
+  "IdentityServerURL": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
