--- a/Services/Discount/Ticket.Services.Discount/Ticket.Services.Discount.csproj
+++ b/Services/Discount/Ticket.Services.Discount/Ticket.Services.Discount.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.9" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.5" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
