--- a/Services/Discount/Ticket.Services.Discount/appsettings.json
+++ b/Services/Discount/Ticket.Services.Discount/appsettings.json
@@ -1,7 +1,8 @@
 {
   "ConnectionStrings": {
-    "SqlServer" : ""
+    "SqlServer": "server=localhost,1455;Database=discountdb;user=sa;pwd=Password123;TrustServerCertificate=true"
   },
+  "IdentityServerURL": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
