--- a/Services/Order/Ticket.Services.Order.Application/Ticket.Services.Order.Application.csproj
+++ b/Services/Order/Ticket.Services.Order.Application/Ticket.Services.Order.Application.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Ticket.Services.Order.Domain\Ticket.Services.Order.Domain.csproj" />
     <ProjectReference Include="..\Ticket.Services.Order.Infrastructure\Ticket.Services.Order.Infrastructure.csproj" />
   </ItemGroup>
