--- a/Services/Order/Ticket.Services.Order.API/appsettings.json
+++ b/Services/Order/Ticket.Services.Order.API/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1444;Database=OrderDb;User=sa;Password=Password123;TrustServerCertificate=true"
+  },
+  "IdentityServerURL": "http://localhost:5001",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
