Catalog MVC finished

--- a/Client/Ticket.Web/appsettings.json
+++ b/Client/Ticket.Web/appsettings.json
@@ -7,6 +7,9 @@
       "Path": "services/catalog/"
     }
   },
+  "PhotoStock": {
+    "Path": "services/photostock/"
+  }
   "ClientSettings": {
     "WebClient": {
       "ClientId": "WebMvcClient",
