--- a/Client/Ticket.Web/appsettings.json
+++ b/Client/Ticket.Web/appsettings.json
@@ -14,6 +14,12 @@
     },
     "Discount": {
       "Path": "/services/discount/"
+    },
+    "Payment": {
+      "Path": "/services/payment/"
+    },
+    "Order": {
+      "Path": "/services/order/"
     }
   },
   "ClientSettings": {
